➕(build): add surefire dependency for arglines